syntax = "proto3";

package user;

option go_package = "userpb";
option java_multiple_files = true;
option java_outer_classname = "UserProto";
option java_package = "com.user";

import "google/api/annotations.proto";

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  enum Status {
    USER_STATUS_INVALID = 0;
    USER_STATUS_REGISTERED = 1;
    USER_STATUS_ACTIVE = 2;
    USER_STATUS_BANNED = 3;
  }
  Status status = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LogoutRequest {}

message NoopResponse {}

service UserSystem {
  rpc Login(LoginRequest) returns (User) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }
  rpc Logout(LogoutRequest) returns (NoopResponse) {
    option (google.api.http) = {
      get: "/v1/logout"
    };
  }
}
